--- a/asking-questions/styles.css
+++ b/asking-questions/styles.css
@@ -1,6 +1,6 @@
 /* ===========================
 WORKSHOP STARTS HERE LOOK HERE HI
-Now here are all the rules we are 
+Here are all the rules we are 
 looking at in this workshop 
 =========================== */
 /* What would happen if you add !important to this color:red ?
@@ -49,21 +49,8 @@ Change the values in Devtools */
   --brand: hsla(0, 100%, 67%, 0.98);
   /* spacing */
   --space: 1rem;
-  --box: 18rem;
   --container: clamp(var(--box), calc(100vw - calc(var(--space) * 2)), 74rem);
   --finger: 48px;
-  --line-length: 60ch;
-}
-/* What does this rule do? Try removing it. */
-* {
-  box-sizing: border-box;
-}
-/* What about this one? 
-Make a prediction first and then find and uncheck this rule in Devtools */
-body,
-html {
-  padding: 0;
-  margin: 0;
 }
 /* Rules for interactive elements like links and buttons. 
 What happens when you change the order of these rules around? */
@@ -84,7 +71,6 @@ a:focus {
 a:focus {
   outline: 2px dashed var(--brand);
 }
-
 /* LAYOUT 
 Set up the body rules: fonts, colours, and spacing. 
 Everything inside the body will inherit these basic styles
@@ -93,21 +79,13 @@ body {
   font: 100%/1.5 var(--copy), system-ui, sans-serif;
   background-color: var(--paper);
   color: var(--ink);
-  /* Let's also write a layout for the whole site.  */
-  display: grid;
-  gap: var(--space);
-  grid-template:
-    ". ...... ." var(--space)
-    ". header ." min-content
-    ". main   ." minmax(75vh, 1fr)
-    ". ...... ." var(--space) /
-    minmax(var(--space), 1fr) var(--container) minmax(var(--space), 1fr);
-  place-content: center;
+  padding: var(--space);
 }
 /* Now let's add each component to this grid layout 
 And give them their own layouts inside. */
 header {
-  grid-area: header;
+  max-width: var(--container);
+  margin: auto;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -116,5 +94,9 @@ header svg {
   width: var(--finger);
 }
 main {
-  grid-area: main;
+  max-width: var(--container);
+  margin: auto;
+}
+summary > * {
+  display: inline-block;
 }
