tidy up after review
We reorganised the problems after feedback and so this is just snagging:

1. make the right text not red
2. reduce jank on transition problem

--- a/asking-questions/styles.css
+++ b/asking-questions/styles.css
@@ -19,15 +19,19 @@ main ul {
 #infinite {
   color: var(--ink);
 }
-.problems li.problem:nth-child(6) {
+.problems li.problem:nth-child(2) {
   color: red;
 }
 #boolean {
+  min-height: 1.5em;
+}
+#boolean p {
   opacity: 1;
   transition: opacity 0.3s;
+  display: block;
 }
-#boolean:hover,
-#boolean:focus {
+#boolean:hover p,
+#boolean:focus p {
   display: none;
   opacity: 0;
 }
