--- a/get-forms/style.css
+++ b/get-forms/style.css
@@ -1,62 +1,62 @@
 body {
-    font-size: 1.5rem;
-    color:#f0efef;
-    background-color: #222222;
+  font-size: 1.5rem;
+  color: #f0efef;
+  background-color: #222222;
 }
 
 form {
-    width: 60%;
-    margin: 1rem auto;
+  width: 60%;
+  margin: 1rem auto;
 }
 
 h2 {
-    text-align: center;
+  text-align: center;
 }
 
 #search-field {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 0.5rem;
 }
 
 #search-field div {
-    display: flex;
-    flex-direction: column;
-    gap: 0.275rem;
+  display: flex;
+  flex-direction: column;
+  gap: 0.275rem;
 }
 
 #search-field div label {
-    margin-left: 0.5rem;
+  margin-left: 0.5rem;
 }
 
 #search-field div input {
-    width: 35vw;
-    height: 2rem;
-    border-radius: 0.5rem;
+  width: 35vw;
+  height: 2rem;
+  border-radius: 0.5rem;
 }
 
 #search-field button {
-    height: 3rem;
-    width: 8rem;
-    font-size: 1rem;
-    border-radius: 8px;
-    background-color: #2476f7;
-    color: #f0efef;
-    cursor: pointer;
-    transition: all 0.2s ease-in-out;
+  height: 3rem;
+  width: 8rem;
+  font-size: 1.2rem;
+  border-radius: 8px;
+  background-color: #0052d6;
+  color: #f0efef;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
 }
 
 #search-field button:hover {
-    background-color: #1d5cc0;
-    transform: scale(1.1);
-    transition: all 0.2s ease-in-out;
+  background-color: #002e79;
+  transform: scale(1.1);
+  transition: all 0.2s ease-in-out;
 }
 
 #sorting-options {
-    margin-top: 1rem;
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-    justify-content: center;
+  margin-top: 1rem;
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
 }
