--- a/components-1/assets/styles.css
+++ b/components-1/assets/styles.css
@@ -9,4 +9,39 @@
 @import url(../docs/menu/styles.css);
 @import url(../docs/footer/styles.css);
 @import url(../docs/card/styles.css);
-@import url(../docs/copy/styles.css);
+/* @import url(../docs/copy/styles.css); */
+.header {
+    grid-area: header;
+    display: grid;
+    grid-template:
+      "logo space page button" var(--finger) /
+      var(--finger) var(--space) 1fr var(--finger);
+  }
+  .header__heading {
+    grid-area: logo;
+    margin: 0;
+  }
+  .header__page {
+    grid-area: page;
+    margin: 0 auto auto 0;
+    font-size: 2em;
+  }
+  .card {
+    background-color: var(--paper);
+    box-shadow: 2px 4px 16px var(--shade);
+    display: flex;
+    flex-flow: column-reverse;
+    align-items: center;
+    overflow: hidden;
+  }
+  .card:hover,
+  .card:focus {
+    box-shadow: 1px 1px 2px var(--shade);
+  }
+  .card__emoji {
+    font-size: clamp(64px, calc(64px + 5vw), 144px);
+  }
+  
+  .card__code {
+    overflow: scroll;
+  }
